--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,13 @@
     android:text = "@string/bbc"
    />
 
+    <Button
+        android:layout_below="@+id/bbc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/button"
+        android:text="@string/main"
+        />
+
 </RelativeLayout>
