--- a/app/src/main/res/layout/activtyheader.xml
+++ b/app/src/main/res/layout/activtyheader.xml
@@ -5,7 +5,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hdrttle"
+        android:text="Activities"
         android:textAlignment="center"
         android:textSize="30sp"/>
 
